RESOLVED FIXED303979
SpeculationRules - ReferrerPolicy attribute on anchor is not taking precedence over the document's policy
https://bugs.webkit.org/show_bug.cgi?id=303979
Summary SpeculationRules - ReferrerPolicy attribute on anchor is not taking precedenc...
Yoav Weiss
Reported 2025-12-11 00:05:33 PST
We should fix it.
Attachments
Yoav Weiss
Comment 1 2025-12-11 00:10:04 PST
EWS
Comment 2 2025-12-11 11:58:03 PST
Committed 304310@main (eaf67dd0d535): <https://commits.webkit.org/304310@main> Reviewed commits have been landed. Closing PR #55234 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-12-11 11:59:13 PST
Note You need to log in before you can comment on or make changes to this bug.